<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.suny.taskmanagerapp.Tasks.TasksFragments.CustomisedTasksFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/taskNameEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/taskNameHint"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="83dp">

                <TextView
                    android:id="@+id/taskTypeTitle"
                    android:layout_width="105dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/taskTypeTextViewTitle"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    android:gravity="center_vertical" />

                <Spinner
                    android:id="@+id/taskTypeSpinner"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_toRightOf="@+id/taskTypeTitle"
                    android:gravity="center_vertical"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="83dp">

                <TextView
                    android:id="@+id/taskStartTimeTitle"
                    android:layout_width="105dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/taskStartTimeTittle"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/taskStartTimeTimer"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_toRightOf="@+id/taskStartTimeTitle"
                    android:gravity="center_vertical"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="83dp">

                <TextView
                    android:id="@+id/estimatedDateTitle"
                    android:layout_width="105dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/taskStartTimeTittle"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/estimatedDate"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_toRightOf="@+id/estimatedDateTitle"
                    android:text="@string/defaultEstimatedDate"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"/>

                <Button
                    android:id="@+id/estimatedDateBtn"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/estimatedDate"
                    android:gravity="center"
                    android:text="@string/timeEditButton" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="83dp">

                <TextView
                    android:id="@+id/estimatedTimeTitle"
                    android:layout_width="105dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/taskStartTimeTittle"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/estimatedTime"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_toRightOf="@+id/estimatedTimeTitle"
                    android:gravity="center_vertical"
                    android:text="@string/defaultEstimateTime"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/estimatedTimeBtn"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/estimatedTime"
                    android:gravity="center"
                    android:text="@string/timeEditButton"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/taskDescriptionEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/taskDescriptionHint"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
